--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,9 +63,9 @@
 
 
         <h3 class="nav">Important Dates</h3>
-	          Submission Deadline: <br/>
-            Notifications: <br/>
-            Camera-Ready Deadline: <br/>
+	          Submission Deadline: February 28, 2022<br/>
+            Notifications: May 6, 2022<br/>
+            Camera-Ready Deadline: June 6, 2022<br/>
 
         <h3 class="nav">Supporters</h3>
             <!--
@@ -81,12 +81,10 @@
       </section>
 
       <footer>
-
-
         <p><br/>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-
       </footer>
+
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
     {% if site.google_analytics %}
