add UCPH as supporter

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,9 +68,13 @@
             Camera-Ready Deadline: June 6, 2022<br/>
 
         <h3 class="nav">Supporters</h3>
-            <!--
-            <p><a href="https://www.usf.edu/engineering/"><img width="150" src="assets/images/USF-COE.png" alt="USF College of Engineering"></a></p>
-            -->
+            <p><a href="https://www.ku.dk/"><img width="150" src="assets/images/UCPH.png" alt="University of Copenhagen"></a></p>
+
+        <footer>
+          <p><br/>
+          <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        </footer>
+
       </header>
 
 
@@ -79,11 +83,6 @@
       {{ content }}
 
       </section>
-
-      <footer>
-        <p><br/>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
 
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
