--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         <!-- <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1> -->
 
         <h3>{{ site.description | default: site.github.project_tagline }}</h3>
-        <h4>2022 &mdash; Copenhagen, Denmark</h4>
+        <h4>July 6-8, 2022 &mdash; Copenhagen, Denmark</h4>
 
         <!-- {% for page in site.pages %}
             <a href={{ page.filename }}>{{ page.title }}</a>
