--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
 
 
         <h3 class="nav">Important Dates</h3>
-            Submission Deadline: <font color="red">March 14, 2022</font>></p>
+            Submission Deadline: <span style="color:red">March 14, 2022</span>
             Notifications: May 12, 2022<br/>
             Camera-Ready Deadline: June 6, 2022<br/>
 
