update bold text

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,9 +63,9 @@
 
 
         <h3 class="nav">Important Dates</h3>
-            Submission Deadline: <span style="color:red">March 14, 2022</span> at 23:59 AoE (Anywhere on Earth) time
-            Notifications: May 12, 2022<br/>
-            Camera-Ready Deadline: June 6, 2022<br/>
+            <span class="bolded">Submission Deadline</span>: <span style="color:red">March 14, 2022</span> at 23:59 AoE (Anywhere on Earth) time
+            <span class="bolded">Notifications</span>: May 12, 2022<br/>
+            <span class="bolded">Camera-Ready Deadline</span>: June 6, 2022<br/>
 
         <h3 class="nav">Supporters</h3>
             <p><a href="https://www.ku.dk/"><img width="150" src="assets/images/UCPH.png" alt="University of Copenhagen"></a></p>
