--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,10 +63,10 @@
 
 
         <h3 class="nav">Important Dates</h3>
-            <b>Submission Deadline (1st round)</b>: March 14, 2022 at 23:59 AoE (Anywhere on Earth) time
-            <b>Submission Deadline (2nd round)</b>: <span style="color:red">April 18, 2022</span> at 23:59 AoE (Anywhere on Earth) time
-            <b>Notification</b>: May 16, 2022<br/>
-            <b>Camera-Ready Deadline</b>: June 6, 2022<br/>
+            <p><b>Submission Deadline (1st round)</b>: March 14, 2022 at 23:59 AoE (Anywhere on Earth) time</p>
+            <p><b>Submission Deadline (2nd round)</b>: <span style="color:red">April 18, 2022</span> at 23:59 AoE (Anywhere on Earth) time</p>
+            <p><b>Notification</b>: May 16, 2022</p>
+            <p><b>Camera-Ready Deadline</b>: June 6, 2022</p>
 
         <h3 class="nav">Supporters</h3>
             <p><a href="https://www.ku.dk/"><img width="150" src="assets/images/UCPH.png" alt="University of Copenhagen"></a></p>
