add conference venue

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,6 +55,7 @@
                   <li><a href="{{site.baseurl}}/camera_ready">Camera Ready Instructions</a></li>
                   <li><a href="{{site.baseurl}}/authors">Instructions for Authors</a></li>
                   <li><a href="{{site.baseurl}}/participants">Instructions for Participants</a></li>
+                  <li><a href="{{site.baseurl}}/venue">Conference Venue</a></li>
                   <li><a href="{{site.baseurl}}/attractions">Attractions</a></li>
                   <li><a href="{{site.baseurl}}/accommodation">Accommodation</a></li>
                 </ul>
