update important dates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,6 +68,7 @@
             <p><b>Submission Deadline (2nd round)</b>: <span style="color:red">April 20, 2022</span> at 23:59 AoE (Anywhere on Earth) time</p>
             <p><b>Notification</b>: May 16, 2022</p>
             <p><b>Camera-Ready Deadline</b>: June 6, 2022</p>
+            <p><b>Author Registration Deadline</b>: June 10, 2022</p>
 
         <h3 class="nav">Supporters</h3>
             <p><a href="https://www.ku.dk/"><img width="150" src="assets/images/UCPH.png" alt="University of Copenhagen"></a></p>
